--- a/package.json
+++ b/package.json
@@ -37,27 +37,36 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.8.0",
+    "fs-ext": "^2.1.1",
     "google-protobuf": "^3.21.4",
     "long": "^5.3.2",
-    "yaml": "^2.8.1",
-    "fs-ext": "^2.1.1"
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.56.0",
+    "@types/fs-ext": "^2.0.0",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^30.0.0",
-    "@types/fs-ext": "^2.0.0",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "globals": "^16.3.0",
     "jest": "^30.0.5",
     "protoc-gen-ts": "^0.8.7",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.1.1",
-    "ts-proto": "^2.7.7",
-    "typescript": "^5.9.2",
     "ts-node": "^10.9.2",
-    "ts-proto-descriptors": "^2.0.0"
+    "ts-proto": "^2.7.7",
+    "ts-proto-descriptors": "^2.0.0",
+    "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "test-exclude": "^7.0.1"
   }
 }
