--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          # Ensure devDependencies are installed for codegen, lint and tests
+          NPM_CONFIG_PRODUCTION: false
+
+      - name: Generate sources
+        run: npm run generate
 
       - name: Lint
         run: npm run lint
