--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,9 @@ jobs:
         run: npm run lint
 
       - name: Run basic tests
-        run: npm test:noserver
+        run: npm run test:noserver
 
       - name: Run E2E tests
         env:
           NEBIUS_E2E_CONFIG_B64: ${{ secrets.NEBIUS_E2E_CONFIG_B64 }}
-        run: npm test:e2e
+        run: npm run test:e2e
