--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,14 @@ jobs:
         run: npm run lint
 
       - name: Run basic tests
+        env:
+          NEBIUS_LOG: DEBUG
         run: npm run test:noserver
 
       - name: Run E2E tests
         env:
           NEBIUS_E2E_CONFIG_B64: ${{ secrets.NEBIUS_E2E_CONFIG_B64 }}
+          NEBIUS_LOG: DEBUG
           GRPC_VERBOSITY: DEBUG
           GRPC_TRACE: 'index,channel,connectivity_state,dns_resolver,pick_first,round_robin,subchannel,transport,keepalive'
         run: npm run test:e2e
