--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,12 @@ jobs:
 
       - name: Run basic tests
         env:
-          NEBIUS_LOG: DEBUG
+          NEBIUS_LOG: TRACE
           NEBIUS_LOG_OUTPUT: stderr
           FORCE_COLOR: 1
-        run: npm run test:noserver
+          GRPC_VERBOSITY: DEBUG
+          GRPC_TRACE: 'index,channel,connectivity_state,dns_resolver,pick_first,round_robin,subchannel,transport,keepalive'
+        run: npm run test:noserver -- --runInBand
 
       - name: Run E2E tests
         env:
