--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,13 +40,20 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Run basic tests
+      - name: Run auth test
         env:
           NEBIUS_LOG: TRACE
           NEBIUS_LOG_OUTPUT: stderr
           FORCE_COLOR: 1
           GRPC_VERBOSITY: DEBUG
           GRPC_TRACE: 'index,channel,connectivity_state,dns_resolver,pick_first,round_robin,subchannel,transport,keepalive'
+        run: npm run test:noserver -- --runInBand --testPathPatterns='auth_integration.test.ts' -t "federation flow"
+
+      - name: Run basic tests
+        env:
+          NEBIUS_LOG: DEBUG
+          NEBIUS_LOG_OUTPUT: stderr
+          FORCE_COLOR: 1
         run: npm run test:noserver -- --runInBand
 
       - name: Run E2E tests
