--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
   "scripts": {
     "bootstrap:generator": "node scripts/bootstrap-generator.js",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "node scripts/build-esm-wrapper.js",
     "build:scripts": "tsc -p tsconfig.scripts.json && chmod +x dist-scripts/scripts/protoc-gen-nebius-ts-sdk.js dist-scripts/scripts/protoc-gen-nebius-ts.js",
-    "build:types": "tsc -p tsconfig.cjs.json --emitDeclarationOnly --outDir dist/cjs",
     "build": "rimraf dist && npm run generate && npm run build:cjs && node scripts/build-esm-facades.js && node scripts/postbuild-mark-module-type.js",
     "clean:generated": "rimraf src/version.ts src/api",
     "clean": "npm run clean:generated && rimraf dist dist-scripts src/generated_test generated_test.lock",
@@ -57,6 +55,7 @@
     "lint": "eslint src/**/*.ts --no-warn-ignored",
     "prepare": "husky",
     "prepublishOnly": "npm run build",
+    "test:builds": "jest --testPathPatterns='build_*.test.ts'",
     "test:e2e": "jest --testPathPatterns='e2e_storage_bucket.test.ts'",
     "test:noserver": "jest --testPathIgnorePatterns='e2e_storage_bucket.test.ts'",
     "test:watch": "jest --watch",
