PUBLICAPI-902: fix name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@nebius/nodejs-sdk",
+  "name": "@nebius/ts-sdk",
   "version": "0.1.0",
-  "description": "Nebius AI SDK for NodeJS",
+  "description": "Nebius AI SDK for Node.js",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nebius/nodejs-sdk.git"
+    "url": "https://github.com/nebius/ts-sdk.git"
   },
   "keywords": [
     "nebius",
