--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nebius/ts-sdk",
+  "name": "@nebius/js-sdk",
   "version": "0.1.0",
   "description": "Nebius AI SDK",
   "main": "dist/cjs/index.js",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nebius/ts-sdk.git"
+    "url": "https://github.com/nebius/js-sdk.git"
   },
   "keywords": [
     "nebius",
