--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "build": "rimraf dist && npm run generate && npm run build:cjs && node scripts/build-esm-facades.js && node scripts/postbuild-mark-module-type.js",
     "clean:generated": "rimraf src/version.ts src/api",
     "clean": "npm run clean:generated && rimraf dist dist-scripts src/generated_test generated_test.lock",
-    "docs": "typedoc",
+    "docs:extract-services": "ts-node scripts/extract-services.ts",
+    "docs": "npm run docs:extract-services && typedoc",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
     "generate:full": "npm run generate && npm run bootstrap:generator",
