--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          submodules: recursive
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -84,8 +86,7 @@ jobs:
           # Ensure devDependencies are installed for codegen, lint and tests
           NPM_CONFIG_PRODUCTION: false
 
-      - name: Publish to NPM
-        run: npm publish --provenance --access public
+      - uses: JS-DevTools/npm-publish@v4
 
   notify-slack-on-failure:
     name: Notify Slack on failure
