--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,5 +10,7 @@ updates:
     schedule:
       interval: 'weekly'
     groups:
-      update-types:
-        - patch
+      version-bumps:
+        applies-to: version-updates
+        update-types:
+          - "patch"
