--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@bufbuild/protobuf": "^2.0.0",
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.8.0",
     "dayjs": "^1.11.18",
