--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,5 +12,18 @@ updates:
     groups:
       version-bumps:
         applies-to: version-updates
+        patterns:
+          - "@typescript-eslint/*"
+          - "@bufbuild/buf"
+        update-types:
+          - "patch"
+          - "minor"
+      version-bumps-patch:
+        applies-to: version-updates
+        patterns:
+          - "*"
+        exclude-patterns:
+          - "@typescript-eslint/*"
+          - "@bufbuild/buf"
         update-types:
           - "patch"
